changes in product entity